src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithWidgets/ValidWithWidgets.php
<?php

namespace Valid\WithWidgets;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithWidgets extends PluginBundle
{
}
