src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/MissingResourceKey1/InvalidMissingResourceKey1.php
<?php

namespace Invalid\MissingResourceKey1;

use Claroline\CoreBundle\Library\PluginBundle;

/**
 * Invalid because requiring keys are missing in its resource definition file
 */
class InvalidMissingResourceKey1 extends PluginBundle
{
}